--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: minimal-mistakes-jekyll
-title: Octocat's homepage
+title: Wayne's homepage
 description: Bookmark this to keep an eye on my project updates!
